<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/backimage"
    tools:context="com.example.manzoorhussain.myoutbox.ContactFromPhoneContacts">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:weightSum="5"
        android:gravity="center"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:gravity="center"
            >
            <Button
                android:id="@+id/Import"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/Contact_from_phone_Import_from_Contact"
                android:textAllCaps="false"
                android:textColor="@android:color/background_dark"
                android:background="@drawable/button"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="center"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:text="@string/Contact_from_phone_Dear"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textColor="@android:color/background_dark"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.5"
            android:background="@drawable/rounded_rec"
            >
            <EditText
                android:id="@+id/Message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="10"
                android:hint="@string/Contact_from_phone_Write_message_here"
                android:gravity="top"
                android:textSize="18dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:backgroundTint="@android:color/transparent"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            >
            <Button
                android:id="@+id/Send"
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:text="@string/Contact_from_phone_Send"
                android:background="@drawable/button"
                />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
