<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/backimage"
    android:orientation="vertical"
    tools:context="com.example.manzoorhussain.myoutbox.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="5"
        android:layout_margin="20dp"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Main_Activity_My_OutBox"
                android:textSize="40dp"
                android:textColor="@android:color/background_dark"
                android:fontFamily="serif"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Main_Activity_Start_A_Compaign"
                android:gravity="center"
                android:textSize="50dp"
                android:textColor="@android:color/background_dark"
                android:textAllCaps="true"
                android:fontFamily="serif"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            >
            <Button
                android:layout_width="190dp"
                android:layout_height="50dp"
                android:text="@string/Main_Activity_Go"
                android:textSize="30dp"
                android:textStyle="bold"
                android:id="@+id/btnGo"
                android:fontFamily="serif"
                android:background="@drawable/button"
                />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
