<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/backimage"
    android:orientation="vertical"
    tools:context="com.example.manzoorhussain.myoutbox.ContactFromPhoneContacts">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="5">

        <EditText
            android:id="@+id/Url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:backgroundTint="@android:color/transparent"
            android:gravity="top"
            android:hint="File Address..."
            android:lines="2"
            android:maxLines="2"
            android:textSize="18dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_weight="0.6"
            android:gravity="center">

            <Button
                android:id="@+id/Browse"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/button"
                android:text="@string/ContactFromExcel_brows_file"
                android:textAllCaps="false"
                android:textColor="@android:color/background_dark" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/Contact_from_phone_Dear"
                android:textAllCaps="false"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.5"
            android:background="@drawable/rounded_rec">

            <EditText
                android:id="@+id/Message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:backgroundTint="@android:color/transparent"
                android:gravity="top"
                android:hint="@string/Contact_from_phone_Write_message_here"
                android:lines="10"
                android:textSize="18dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/Send"
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:background="@drawable/button"
                android:text="@string/Contact_from_phone_Send" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
